--- a/Sm_Printf/.github/workflows/test_sm_printf.yml
+++ b/Sm_Printf/.github/workflows/test_sm_printf.yml
@@ -33,4 +33,4 @@ jobs:
       uses: actions/checkout@v2
 
     - name: tests_bash
-      run: tests/test_matchstick.sh
+      run: tests/test_sm_printf.sh
