[ADD] unit_tests for sm_libc, flag -s for printf

--- a/lib/sm_printf/Makefile
+++ b/lib/sm_printf/Makefile
@@ -7,8 +7,6 @@
 
 DIR	=	sources/
 
-DIR_LIB	=	lib/my
-
 CFLAGS	+=	-W -Wall -Wextra
 
 CPPFLAGS	=	-I./includes
@@ -29,7 +27,7 @@ OBJ	=	$(SRC:.c=.o)
 
 LDFLAGS	= -L.
 
-LDLIBS		=	-lmy
+LDLIBS		=	-lsm_libc
 
 CC	=	gcc
 
@@ -38,26 +36,21 @@ AR	=	ar
 
 NAME	=	sm_printf
 
-LIB_NAME	=	libmyprintf.a
+LIB_NAME	=	libsm_printf.a
 
 all: $(LIB_NAME)
 
-$(LIB_NAME): make_lib $(OBJ)
+$(LIB_NAME): $(OBJ)
 		$(AR) rc $(LIB_NAME) $(OBJ)
 
-binary: make_lib $(OBJ) $(MAIN_OBJ)
+binary: $(OBJ) $(MAIN_OBJ)
 		$(CC) -o $(NAME) $(OBJ) $(MAIN_OBJ) $(LDFLAGS) $(LDLIBS)
 
-make_lib:
-		$(MAKE) -sC $(DIR_LIB)
-
 clean:
-		$(MAKE) -sC $(DIR_LIB) clean
 		$(RM) $(OBJ) $(MAIN_OBJ)
 
 fclean: clean
 		$(RM) -f $(NAME) $(LIB_NAME)
-		$(MAKE) -sC $(DIR_LIB) fclean
 
 re: fclean $(NAME)
 
