--- a/.github/workflows/test_sm_printf.yml
+++ b/.github/workflows/test_sm_printf.yml
@@ -33,4 +33,4 @@ jobs:
       uses: actions/checkout@v2
 
     - name: tests_bash
-      run: Sm_Printf/tests/test_sm_printf.sh
+      run: make bash_test
