[ADD]flag digits, flag '-', flag '0'

--- a/lib/sm_printf/Makefile
+++ b/lib/sm_printf/Makefile
@@ -17,6 +17,9 @@ SRC_FILES	=	sm_printf.c\
 				flags/flag_base.c\
 				pre_flags/preflag_hash.c\
 				pre_flags/preflag_plus.c\
+				numbers/numbers.c\
+				numbers/checking.c\
+				numbers/make_print.c\
 
 SRC_MAIN	=	main.c\
 
