[MOD] lib/sm_libc/Makefile, [MOD] lib/sm_libc/sm_libc.h, [MOD] lib/sm_libc/sm_strconcat.c, [ADD] lib/sm_libc/sm_get_next_line.c, [ADD] lib/sm_libc/sm_substr.c,
adding get_next_line and substr

--- a/lib/sm_libc/Makefile
+++ b/lib/sm_libc/Makefile
@@ -25,6 +25,8 @@ SRC		=	sm_realloc.c\
 			sm_pow.c\
 			sm_ftoa.c\
 			sm_strncpy.c\
+			sm_substr.c\
+			sm_get_next_line.c\
 
 OBJ		=		$(SRC:c=o)
 
